--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   "workbench.editor.labelFormat": "short",
   "workbench.tree.indent": 20,
   "workbench.iconTheme": "material-icon-theme",
-  "workbench.colorTheme": "Dracula",
+  "workbench.colorTheme": "Tokyo Night Storm",
 
   // Editor Settings
   "editor.fontFamily": "JetBrains Mono",
