--- a/.github/.gitignore
+++ b/.github/.gitignore
@@ -11,6 +11,7 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -22,6 +23,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+pnpm-error.log*
+
 
 # Create useful gitignore
 # https://www.toptal.com/developers/gitignore/
